<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewEquation"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingEnd="30dp"
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:ignore="NestedWeights,RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingEnd="30dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="40sp"
                tools:ignore="RtlSymmetry" />

            <ImageButton
                android:id="@+id/buttonBackspace"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:background="@drawable/backspace"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/backspace"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/c"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:backgroundTint="#A5282C"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonSqrt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/sqrt"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:backgroundTint="#6eabcc"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonExponent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/exponent"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:backgroundTint="#6eabcc"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonSin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/sin"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:backgroundTint="#6eabcc"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonCos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/cos"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:backgroundTint="#6eabcc"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#1c2426"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#1c2426"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#1c2426"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/divide"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:backgroundTint="#ff9500"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonFactorial"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/factorial"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:backgroundTint="#6eabcc"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#1c2426"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#1c2426"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#1c2426"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/multiply"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:backgroundTint="#ff9500"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonLn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/ln"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:backgroundTint="#6eabcc"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#1c2426"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#1c2426"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#1c2426"
                tools:ignore="ButtonStyle" />


            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/subtract"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:backgroundTint="#ff9500"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonParentheses"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/parenthesis"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:backgroundTint="#8e8bc4"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#1c2426"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#1c2426"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonPi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/pi"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#1c2426"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:backgroundTint="#ff9500"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonEqual"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                android:text="@string/equal"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:backgroundTint="#94ba93"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>